# ai-parking-reservation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  llm.txt  main.py  main_api.py  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/fix-lint/: SKILL.md
.opencode/skills/update-llm-txt/: SKILL.md
db/: init.sql
src/: __init__.py
src/adapters/incoming/: __init__.py
src/adapters/incoming/api/: __init__.py  admin_routes.py  client_routes.py  routes.py  schemas.py
src/adapters/incoming/streamlit_app/: __init__.py  admin_page.py  api_client.py  app.py  chat_page.py  chat_widgets.py  client_page.py
src/adapters/outgoing/: __init__.py
src/adapters/outgoing/llm/: __init__.py  chatbot.py
src/adapters/outgoing/persistence/: database.py  in_memory.py  models.py  postgres.py
src/config/: __init__.py  dependencies.py  logging.py  settings.py
src/core/: __init__.py
src/core/domain/: __init__.py  exceptions.py  models.py
src/core/ports/: __init__.py
src/core/ports/incoming/: __init__.py  use_cases.py
src/core/ports/outgoing/: __init__.py  repositories.py
src/core/usecases/: __init__.py  admin_approval.py  chat_conversation.py  check_availability.py  manage_parking_spaces.py  manage_reservations.py  reserve_parking.py
tests/integration/: __init__.py  conftest.py  test_postgres_repositories.py
tests/unit/: test_models.py  test_repositories.py  test_reservation.py
